--- a/Pages/preguntas frecuentes.html
+++ b/Pages/preguntas frecuentes.html
@@ -15,10 +15,10 @@
                 <ul>
 
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="Pages/galeria.html">Galería</a></li>
-                    <li><a href="Pages/pasarela.html">Pasarelas</a></li>
-                    <li><a href="Pages/proximosshows.html">Próximos shows</a></li>
-                    <li><a href="Pages/preguntas frecuentes.html">Preguntas frecuentes</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+            <li><a href="pasarela.html">Pasarelas</a></li>
+            <li><a href="proximosshows.html">Próximos shows</a></li>
+            <li><a href="preguntas frecuentes.html">Preguntas frecuentes</a></li>
 
                 </ul>
 
