--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="shortcut icon" href="../Imagenes/shutterstock_1197572524.jpg">
     <link rel="stylesheet" href="../estilo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -33,37 +37,37 @@
                 
                 <div id="maquillaje1">
                  
-                    <img src="../Imagenes/huthor (1).jfif" width="394" height="406" alt="Maquillaje 1">
+                    <img src="../Imagenes/huthor (1).jfif" width="394" height="406" alt="Maquillaje 1" class="img-fluid">
                     <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div></div>
 
-                        <img src="../Imagenes/huthor.jfif" width="540" height="510" alt="Maquillaje 2">
+                        <img src="../Imagenes/huthor.jfif" width="540" height="510" alt="Maquillaje 2" class="img-fluid">
                         <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div></div>
 
-                        <img src="../Imagenes/Maison Margiela at Paris Fashion Week Fall 2017.jfif" width="399" height="600" alt="Maquillaje 3">
+                        <img src="../Imagenes/Maison Margiela at Paris Fashion Week Fall 2017.jfif" width="399" height="600" alt="Maquillaje 3" class="img-fluid">
                         <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div></div>
 
-                        <img src="../Imagenes/Natasha Janardan.jfif" width="500" height="629" alt="Maquillaje 4">
+                        <img src="../Imagenes/Natasha Janardan.jfif" width="500" height="629" alt="Maquillaje 4" class="img-fluid">
                         <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div></div>
 
-                        <img src="../Imagenes/Runway Report.png" width="500" height="589" alt="Maquillaje 5">
+                        <img src="../Imagenes/Runway Report.png" width="500" height="589" alt="Maquillaje 5" class="img-fluid">
                         <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div></div>
 
-                        <img src="../Imagenes/Spring_Summer  2013 Collection from Claude Tarantino.jfif" width="375" height="500" alt="Maquillaje 6">
+                        <img src="../Imagenes/Spring_Summer  2013 Collection from Claude Tarantino.jfif" width="375" height="500" alt="Maquillaje 6" class="img-fluid">
                         <div></div>
 
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
