--- a/Pages/pasarela.html
+++ b/Pages/pasarela.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="shortcut icon" href="../Imagenes/shutterstock_1197572524.jpg">
     <link rel="stylesheet" href="../estilo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
     <header>
@@ -32,7 +37,7 @@
                <div class="imagenespasarela">
 
                         <div></div>
-                        <img src="../Imagenes/FKC41snWUAUPd3F.jfif" width="500" height="750" alt="Pasarela 1">
+                        <img src="../Imagenes/FKC41snWUAUPd3F.jfif" width="500" height="750" alt="Pasarela 1" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -40,7 +45,7 @@
                         <div></div>    
 
                         <div></div>
-                    <img src="../Imagenes/FKC67m3WUAggt20.jfif" width="500" height="750" alt="Pasarela 2">
+                    <img src="../Imagenes/FKC67m3WUAggt20.jfif" width="500" height="750" alt="Pasarela 2" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -48,7 +53,7 @@
                         <div></div>    
 
                         <div></div>
-                    <img src="../Imagenes/FKCdRwUXwAEeppp.jfif" width="480" height="720" alt="Pasarela 3">
+                    <img src="../Imagenes/FKCdRwUXwAEeppp.jfif" width="480" height="720" alt="Pasarela 3" class="img-fluid" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -56,7 +61,7 @@
                         <div></div>    
 
                         <div></div>
-                    <img src="../Imagenes/FKCh_lsXEAICGAc.jfif" width="480" height="720" alt="Pasarela 4">
+                    <img src="../Imagenes/FKCh_lsXEAICGAc.jfif" width="480" height="720" alt="Pasarela 4" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -64,7 +69,7 @@
                         <div></div>    
 
                         <div></div>
-                    <img src="../Imagenes/FKCINQZXoAQtZUq.jfif" width="500" height="750" alt="Pasarela 5">
+                    <img src="../Imagenes/FKCINQZXoAQtZUq.jfif" width="500" height="750" alt="Pasarela 5" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -72,7 +77,7 @@
                         <div></div>
 
                         <div></div>
-                        <img src="../Imagenes/FKDeiBkXEAkx9xl.jfif" width="682" height="1024" alt="Pasarela 6">
+                        <img src="../Imagenes/FKDeiBkXEAkx9xl.jfif" width="682" height="1024" alt="Pasarela 6" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -80,7 +85,7 @@
                         <div></div>
 
                         <div></div>
-                        <img src="../Imagenes/FKDj7niXwAM7Vv5.jfif" width="480" height="720" alt="Pasarela 7">
+                        <img src="../Imagenes/FKDj7niXwAM7Vv5.jfif" width="480" height="720" alt="Pasarela 7" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -88,7 +93,7 @@
                         <div></div>
 
                         <div></div>
-                        <img src="../Imagenes/FJ_ZSOdXIAQYrVb.jfif" width="480" height="720" alt="Pasarela 8">
+                        <img src="../Imagenes/FJ_ZSOdXIAQYrVb.jfif" width="480" height="720" alt="Pasarela 8" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -96,7 +101,7 @@
                         <div></div>
 
                         <div></div>
-                        <img src="../Imagenes/FJ-UVK2XMAMNqMh.jfif" width="682" height="1024" alt="Pasarela 9">
+                        <img src="../Imagenes/FJ-UVK2XMAMNqMh.jfif" width="682" height="1024" alt="Pasarela 9" class="img-fluid">
                         <div></div>
 
                         <div></div>
@@ -104,7 +109,7 @@
                         <div></div>
 
                         <div></div>
-                        <img src="../Imagenes/FKDjtv_XIAY82eE.jfif" width="480" height="720" alt="Pasarela 10">
+                        <img src="../Imagenes/FKDjtv_XIAY82eE.jfif" width="480" height="720" alt="Pasarela 10" class="img-fluid">
                         <div></div>
 
                         <div></div>
